--- a/heat.html
+++ b/heat.html
@@ -6,154 +6,138 @@
   <title>Global Temperature Heatmap with Tooltip</title>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <style>
-    .axis-label {
-      font-size: 12px;
-      font-weight: bold;
-    }
-    .title {
-      text-anchor: middle;
-      font-size: 24px;
-      font-weight: bold;
-    }
-    .tooltip {
-      position: absolute;
-      background: rgba(0, 0, 0, 0.8);
-      color: #fff;
-      padding: 5px 10px;
-      border-radius: 5px;
-      font-size: 12px;
-      pointer-events: none;
-    }
+    body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        #heatmap {
+            display: flex;
+            justify-content: center;
+        }
+        .cell {
+            stroke: #000;
+            stroke-width: 0.5;
+        }
+        .axis-label {
+            font-size: 12px;
+        }
+        #legend rect {
+            stroke: #000;
+        }
+        #tooltip {
+            position: absolute;
+            visibility: hidden;
+            background: rgba(0, 0, 0, 0.8);
+            color: #fff;
+            padding: 5px;
+            border-radius: 3px;
+        }
   </style>
 </head>
 <body>
-  <svg id="heatmap" width="1200" height="500"></svg>
-  <div id="tooltip" class="tooltip" style="display: none;"></div>
+ <h1 id="title">Global Temperature Heat Map</h1>
+    <p id="description">Monthly Global Land-Surface Temperature from 1754 to 2015</p>
 
+    <div id="heatmap">
+        <svg id="svg"></svg>
+    </div>
+
+    <div id="tooltip"></div>
   <script>
-    const url = "https://raw.githubusercontent.com/freeCodeCamp/ProjectReferenceData/master/global-temperature.json";
-    const width = 1200;
-    const height = 500;
-    const margin = { top: 100, right: 20, bottom: 100, left: 100 };
+ const url = "https://raw.githubusercontent.com/freeCodeCamp/ProjectReferenceData/master/global-temperature.json";
+        const margin = { top: 60, right: 20, bottom: 100, left: 100 };
+        const width = 1200 - margin.left - margin.right;
+        const height = 600 - margin.top - margin.bottom;
 
-    const svg = d3.select("#heatmap")
-                  .attr("width", width)
-                  .attr("height", height);
+        const svg = d3.select("#svg")
+            .attr("width", width + margin.left + margin.right)
+            .attr("height", height + margin.top + margin.bottom)
+            .append("g")
+            .attr("transform", `translate(${margin.left}, ${margin.top})`);
 
-    const tooltip = d3.select("#tooltip");
+        const tooltip = d3.select("#tooltip");
 
-    // Load the data
-    d3.json(url).then(data => {
-      const baseTemp = data.baseTemperature;
-      const monthlyData = data.monthlyVariance;
+        d3.json(url).then(data => {
+            const baseTemp = data.baseTemperature;
+            const monthlyData = data.monthlyVariance;
 
-      // Scales
-      const xScale = d3.scaleBand()
-                       .domain(monthlyData.map(d => d.year))
-                       .range([margin.left, width - margin.right])
-                       .padding(0.01);
+            const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
 
-      const yScale = d3.scaleBand()
-                       .domain(d3.range(1, 13))
-                       .range([margin.top, height - margin.bottom])
-                       .padding(0.01);
+            const xScale = d3.scaleBand()
+    .domain(d3.range(
+        d3.min(monthlyData, d => d.year), 
+        d3.max(monthlyData, d => d.year) + 1
+    ))
+    .range([0, width])
+    .padding(0.01);
 
-      const tempExtent = d3.extent(monthlyData, d => baseTemp + d.variance);
-      const colorScale = d3.scaleSequential(d3.interpolateRdYlBu)
-                           .domain([tempExtent[1], tempExtent[0]]);
 
-      // Axes
-      const xAxis = d3.axisBottom(xScale)
-                      .tickValues(xScale.domain().filter((d, i) => i % 10 === 0));
-      const yAxis = d3.axisLeft(yScale)
-                      .tickFormat(month => d3.timeFormat("%B")(new Date(2000, month - 1, 1)));
+            const yScale = d3.scaleBand()
+                .domain(d3.range(0, 12))
+                .range([0, height])
+                .padding(0.01);
 
-      svg.append("g")
-         .attr("transform", `translate(0, ${height - margin.bottom})`)
-         .call(xAxis)
-         .attr("class", "axis-label");
+            const colorScale = d3.scaleSequential(d3.interpolateInferno)
+                .domain(d3.extent(monthlyData, d => baseTemp + d.variance));
 
-      svg.append("g")
-         .attr("transform", `translate(${margin.left}, 0)`)
-         .call(yAxis)
-         .attr("class", "axis-label");
+            svg.append("g")
+                .attr("id", "x-axis")
+                .attr("transform", `translate(0, ${height})`)
+                .call(d3.axisBottom(xScale).tickValues(xScale.domain().filter(d => d % 10 === 0)).tickFormat(d3.format("d")));
 
-      // Draw heatmap
-      svg.selectAll(".cell")
-         .data(monthlyData)
-         .enter()
-         .append("rect")
-         .attr("class", "cell")
-         .attr("x", d => xScale(d.year))
-         .attr("y", d => yScale(d.month))
-         .attr("width", xScale.bandwidth())
-         .attr("height", yScale.bandwidth())
-         .attr("fill", d => colorScale(baseTemp + d.variance))
-         .on("mouseover", (event, d) => {
-           tooltip.style("display", "block")
-                  .html(
-                    `<strong>Year:</strong> ${d.year}<br>
-                     <strong>Month:</strong> ${d3.timeFormat("%B")(new Date(2000, d.month - 1, 1))}<br>
-                     <strong>Temperature:</strong> ${(baseTemp + d.variance).toFixed(2)}°C<br>
-                     <strong>Variance:</strong> ${d.variance.toFixed(2)}°C`
-                  )
-                  .style("left", `${event.pageX + 10}px`)
-                  .style("top", `${event.pageY - 20}px`);
-         })
-         .on("mousemove", event => {
-           tooltip.style("left", `${event.pageX + 10}px`)
-                  .style("top", `${event.pageY - 20}px`);
-         })
-         .on("mouseout", () => {
-           tooltip.style("display", "none");
-         });
+            svg.append("g")
+                .attr("id", "y-axis")
+                .call(d3.axisLeft(yScale).tickFormat(d => months[d]));
 
-      // Title
-      svg.append("text")
-         .attr("class", "title")
-         .attr("x", width / 2)
-         .attr("y", margin.top / 2)
-         .text("Monthly Global Land-Surface Temperature");
+            svg.selectAll(".cell")
+                .data(monthlyData)
+                .enter()
+                .append("rect")
+                .attr("class", "cell")
+                .attr("x", d => xScale(d.year))
+                .attr("y", d => yScale(d.month - 1))
+                .attr("width", xScale.bandwidth())
+                .attr("height", yScale.bandwidth())
+                .attr("data-month", d => d.month - 1)
+                .attr("data-year", d => d.year)
+                .attr("data-temp", d => baseTemp + d.variance)
+                .attr("fill", d => colorScale(baseTemp + d.variance))
+                .on("mouseover", (event, d) => {
+                    tooltip.style("visibility", "visible")
+                        .style("top", `${event.pageY - 10}px`)
+                        .style("left", `${event.pageX + 10}px`)
+                        .attr("data-year", d.year)
+                        .html(`Year: ${d.year}<br>Month: ${months[d.month - 1]}<br>Temp: ${(baseTemp + d.variance).toFixed(2)}°C`);
+                })
+                .on("mouseout", () => tooltip.style("visibility", "hidden"));
 
-      // Legend
-      const legendWidth = 300;
-      const legendHeight = 20;
+           
+            const legend = svg.append("g")
+                .attr("id", "legend")
+                .attr("transform", `translate(0, ${height + 40})`);
 
-      const legendScale = d3.scaleLinear()
-                            .domain(tempExtent)
-                            .range([0, legendWidth]);
+            const legendData = colorScale.ticks(6).map(d => ({ temp: d, color: colorScale(d) }));
 
-      const legendAxis = d3.axisBottom(legendScale)
-                           .ticks(10)
-                           .tickFormat(d3.format(".1f"));
+            legend.selectAll("rect")
+                .data(legendData)
+                .enter()
+                .append("rect")
+                .attr("x", (d, i) => i * 40)
+                .attr("y", 0)
+                .attr("width", 40)
+                .attr("height", 20)
+                .attr("fill", d => d.color);
 
-      const legend = svg.append("g")
-                        .attr("transform", `translate(${(width - legendWidth) / 2}, ${height - margin.bottom + 40})`);
-
-      legend.append("defs")
-            .append("linearGradient")
-            .attr("id", "legend-gradient")
-            .selectAll("stop")
-            .data(colorScale.ticks().map((t, i, n) => ({
-              offset: `${(100 * i) / (n.length - 1)}%`,
-              color: colorScale(t)
-            })))
-            .enter()
-            .append("stop")
-            .attr("offset", d => d.offset)
-            .attr("stop-color", d => d.color);
-
-      legend.append("rect")
-            .attr("x", 0)
-            .attr("y", 0)
-            .attr("width", legendWidth)
-            .attr("height", legendHeight)
-            .style("fill", "url(#legend-gradient)");
-
-      legend.append("g")
-            .attr("transform", `translate(0, ${legendHeight})`)
-            .call(legendAxis);
-    });
+            legend.selectAll("text")
+                .data(legendData)
+                .enter()
+                .append("text")
+                .attr("x", (d, i) => i * 40 + 20)
+                .attr("y", 35)
+                .attr("text-anchor", "middle")
+                .attr("class", "axis-label")
+                .text(d => d.temp.toFixed(2));
+        });
   </script>
 </body>
 </html>
